--- a/public/documentation.html
+++ b/public/documentation.html
@@ -15,7 +15,7 @@
     movies, directors, and genres. Users will be able to sign up, update their
     personal information, and create a list of their favorite movies.
   </p>
-  <script type="module" src="server.js"></script>
+  <script type="module"></script>
 </body>
 
 </html>
