--- a/public/documentation.html
+++ b/public/documentation.html
@@ -5,16 +5,183 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Movie API Documentation</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
   <h1> Movie API Documentation</h1>
+  <br>
   <p>
     This is the server-side component of a "movies" web application. The web
     application will provide users with access to information about different
     movies, directors, and genres. Users will be able to sign up, update their
     personal information, and create a list of their favorite movies.
   </p>
+  <div>
+    <table class="table table-bordered border-primary">
+      <thead>
+        <tr>
+          <th scope="col">1</th>
+          <th scope="col">Business Logic</th>
+          <th scope="col">URL</th>
+          <th scope="col">HTTP Method</th>
+          <th scope="col">CRUD Operation</th>
+          <th scope="col">Request body data format</th>
+          <th scope="col">Response body data format</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Return a list of ALL movies to the user</td>
+          <td>/movies</td>
+          <td>GET</td>
+          <td>READ</td>
+          <td>None</td>
+          <td>A JSON object holding data about all the students</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Return data (description, genre, director, image URL, whether it's featured or not) about a single movie by title to the user</td>
+          <td>/movies/:title</td>
+          <td>GET</td>
+          <td>READ</td>
+          <td>None</td>
+          <td>A JSON object holding data about a single student, containing an ID, name, and classes property. Example: 
+            <code> 
+              {
+                "Title":"The Fountain",
+                "Description":"As a modern-day scientist...",
+                "Genre": {
+                  "Name":"Drama",
+                  "Description":"drama is a category of narrative fiction..."
+                },
+            
+                "Director": {
+                  "Name":"Darren Aronofsky",
+                  "Bio":"Darren Aronofsky was born February 12, 1969, in Brooklyn, New York...Most recently, he completed the films Noah (2014) and Mother! (2017).",
+                  "Birth":1969.0
+                },
+            
+                },
+            </code>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Return data about a genre (description) by name/title (e.g., “Thriller”)</td>
+          <td>/movies/genre/:genreName</td>
+          <td>GET</td>
+          <td>READ</td>
+          <td>None</td>
+          <td>A JSON object holding data about a single genre, containing the name/title and description. Example: 
+            <code>
+            "Genre": {
+                  "Name"": "Drama",
+                  "Description": "In film and television, drama is a category of narrative fiction (or semi-fiction) intended to be more serious than humorous in tone."
+                },
+            </code>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Return data about a director (bio, birth year, death year) by name</td>
+          <td>/movies/director/:directorName</td>
+          <td>GET</td>
+          <td>READ</td>
+          <td>None</td>
+          <td>A JSON object holding data about a single director , containing the name, bio, birth year, and death year (if applicable). Example: 
+            <code>
+            "Director": {
+                  "Name": "Darren Aronofsky",
+                  "Bio": "Darren Aronofsky was born February 12, 1969, in Brooklyn, New York...Most recently, he completed the films Noah (2014) and Mother! (2017).",
+                  "Birth": 1969.0
+                },
+            </code>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>Allow new users to register</td>
+          <td>/users</td>
+          <td>POST</td>
+          <td>CREATE</td>
+          <td>A JSON object holding data about the new user to add, structured like:
+            <code> 
+              {
+                name: "Kim",
+                favoriteMovies: []
+              }
+            </code>
+          </td>
+          <td>A JSON object holding data about the new user that was added, including an ID: 
+            <code> 
+              {
+                id: 1 
+                name: "Kim",
+                favoriteMovies: []
+              },
+            </code>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td>Allow users to update their user info (username)</td>
+          <td>/users/:id</td>
+          <td>PUT</td>
+          <td>UPDATE</td>
+          <td>None</td>
+          <td>A JSON object holding data about the user that was updated:
+            <code>
+             {
+                id: 1 
+                name: "Kimmy",
+                favoriteMovies: []
+              },
+            </code>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td>Allow users to add a movie to their list of favorites (showing only a text that a movie has been added)</td>
+          <td>/users/:id/:movieTitle</td>
+          <td>POST</td>
+          <td>CREATE</td>
+          <td>None</td>
+          <td>A text message indicating whether the movie was added to the user's favorite list</td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td>Allow users to remove a movie from their list of favorites (showing only a text that a movie has been removed)</td>
+          <td>/users/:id/:movieTitle</td>
+          <td>DELETE</td>
+          <td>DELETE</td>
+          <td>None</td>
+          <td>A text message indicating whether the movie was removed from the user's favorite list</td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td>Allow existing users to deregister (showing only a text that a user email has been removed)</td>
+          <td>/users/:id</td>
+          <td>DELETE</td>
+          <td>DELETE</td>
+          <td>None</td>
+          <td>A text message indicating whether the user was removed from the database</td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous"> </script>
   <script type="module"></script>
 </body>
 
