Added the request body for the PUT

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -131,7 +131,15 @@
           <td>/users/:id</td>
           <td>PUT</td>
           <td>UPDATE</td>
-          <td>None</td>
+          <td>A JSON object holding data about the user to be updated. Example:
+            <code>
+             {
+                id: 1 
+                name: "Kimmy",
+                favoriteMovies: []
+              },
+            </code>
+          </td>
           <td>A JSON object holding data about the user that was updated:
             <code>
              {
