Changed CRUD operations for 7 & 8

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -188,7 +188,7 @@
           <td>Allow users to add a movie to their list of favorites</td>
           <td>/users/:username/movies/:MovieID</td>
           <td>POST</td>
-          <td>CREATE</td>
+          <td>UPDATE</td>
           <td>None</td>
           <td>A JSON object holding data showing the movie added to the user's favorite list. Example:
             <code>
@@ -211,7 +211,7 @@
           <td>Allow users to remove a movie from their list of favorites</td>
           <td>/users/:username/movies/:MovieID</td>
           <td>DELETE</td>
-          <td>DELETE</td>
+          <td>UPDATE</td>
           <td>None</td>
           <td>A JSON object holding data showing the movie was removed from the user's favorite list. Example:
             <code>
