Margins to documentation

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -9,7 +9,7 @@
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="m3">
   <h1> Movie API Documentation</h1>
   <br>
   <p>
@@ -22,7 +22,7 @@
     <table class="table table-bordered border-primary">
       <thead>
         <tr>
-          <th scope="col">1</th>
+          <th scope="col"></th>
           <th scope="col">Business Logic</th>
           <th scope="col">URL</th>
           <th scope="col">HTTP Method</th>
